# m3u8downloader

./: Cargo.toml  README.md
src/: lib.rs  main.rs  thread_pool.rs
ui/: app-window.slint  loading-spinner.slint
