[package]
name = "m3u8downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.16.0", default-features = false, features = ["compat-1-2", "std", "backend-default", "renderer-femtovg"] }
rfd = "0.17.2"
reqwest = { version = "0.13", features = ["blocking", "stream"] }
url = "2.5.8"
regex = "1.12.3"
winsafe = { version = "0.0.27", features = ["user"] }

[build-dependencies]
slint-build = "1.16.0"

[profile.release]
debug = false
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
